@@ -243,6 +243,14 @@ bradley_2013
     :undoc-members:
     :show-inheritance:
 
+campbell_1997
+---------------------------------------------
+
+.. automodule:: openquake.hazardlib.gsim.campbell_1997
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
 campbell_2003
 ---------------------------------------------
 
