@@ -1,0 +1,46 @@
+rup_mag,rup_rake,dist_rrup,site_vs30,result_type,pga
+6.5,0,2.9864,750,MEAN,0.47172
+6.5,0,2.9864,760,MEAN,0.61039
+6.5,0,2.9864,1500,MEAN,0.55514
+6.5,0,9.954,750,MEAN,0.31496
+6.5,0,9.954,760,MEAN,0.33211
+6.5,0,9.954,1500,MEAN,0.28394
+6.5,0,29.977,750,MEAN,0.108861
+6.5,0,29.977,760,MEAN,0.094459
+6.5,0,29.977,1500,MEAN,0.076199
+6.5,0,49.952,750,MEAN,0.057412
+6.5,0,49.952,760,MEAN,0.04558
+6.5,0,49.952,1500,MEAN,0.035915
+5,0,3.0001,750,MEAN,0.33891
+5,0,4.9991,750,MEAN,0.2404
+5,0,20.064,750,MEAN,0.049647
+5,0,49.988,750,MEAN,0.0151063
+5,90,3.0001,750,MEAN,0.57239
+5,90,4.9991,750,MEAN,0.38275
+5,90,20.064,750,MEAN,0.067364
+5,90,49.988,750,MEAN,0.0185339
+6.5,0,3.0001,750,MEAN,0.47356
+6.5,0,4.9991,750,MEAN,0.43175
+6.5,0,20.064,750,MEAN,0.17069
+6.5,0,49.988,750,MEAN,0.056685
+6.5,90,3.0001,750,MEAN,0.69118
+6.5,90,4.9991,750,MEAN,0.59671
+6.5,90,20.064,750,MEAN,0.20111
+6.5,90,49.988,750,MEAN,0.060711
+8,0,3.0001,750,MEAN,0.53002
+8,0,4.9991,750,MEAN,0.5228
+8,0,20.064,750,MEAN,0.3953
+8,0,49.988,750,MEAN,0.193423
+8,90,3.0001,750,MEAN,0.67173
+8,90,4.9991,750,MEAN,0.62626
+8,90,20.064,750,MEAN,0.40665
+8,90,49.988,750,MEAN,0.179573
+8.0,0,49.988,750,MEAN,0.19440
+6.5,90,49.988,750,MEAN,0.061297
+5,0,49.988,750,MEAN,0.015137
+6.5,0,2.9864,750,MEAN,0.47262
+6.5,90,2.9864,750,MEAN,0.69139
+6.5,0,2.9864,760,MEAN,0.60862
+6.5,90,2.9864,760,MEAN,0.89035
+6.5,90,2.9864,1500,MEAN,0.81307
+6.5,0,2.9864,1500,MEAN,0.55580
